[package]
name = "iptables_exporter"
version = "0.2.0"
edition = "2021"
authors = [
	"Kevin K. <kbknapp@gmail.com>",
]
description = "A Prometheus exporter for iptables"
repository = "https://github.com/kbknapp/iptables_exporter"
keywords = [
	"prometheus",
	"iptables",
	"exporter",
	"prometheus_exporter",
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.60.0" # MSRV

[badges]
is-it-maintained-issue-resolution = { repository = "kbknapp/iptables_exporter" }
is-it-maintained-open-issues = { repository = "kbknapp/iptables_exporter" }
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.40"
clap = {version= "4.0.0", features = ["derive", "cargo", "wrap_help"]}
prometheus = "0.13.3"
prometheus-hyper = "0.1.2"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.3.16"
